--- a/EduGame.cabal
+++ b/EduGame.cabal
@@ -1,6 +1,6 @@
-Name: cpphs
+Name: EduGame
 Version: 1.9
-Copyright: 2009-2010, Bestian Tang
+Copyright: 2009-2011, Bestian Tang
 Build-Depends: base < 5, haskell98, interpolatedstring-perl6, FindBin, text, attoparsec-text, Glob
 Author: Bestian Tang, Audrey Tang
 Maintainer: Audrey Tang <audreyt@audreyt.org>
@@ -9,5 +9,5 @@ Description: An educational card game about education.
 Category: Game
 Build-type: Simple
 
-Executable: educards
-Main-Is: educards.hs
+Executable: v2
+Main-Is: v2.hs
